--- a/weather app/index.html
+++ b/weather app/index.html
@@ -40,7 +40,7 @@
 
 <script>
 
-const apiKey = "928d238909842fc8a32c42ab07d0d9a4";
+const apiKey = "";
 const apiUrl = "https://api.openweathermap.org/data/2.5/weather?units=metric&q=";
 
 const searchBox = document.querySelector(".search input");
